src/styles/blocks/_post.scss
.post {
  @extend %block;

  small {
    color: $color--faint;
    font-size: 100%;
  }

  footer {
    font-size: 0;

    cite {
      @extend %heading;
      display: block;
      font-style: normal;
      transition: trans(color);
    }

    cite a {
      @extend %underlined-anchor;
    }

    cite span::after {
      content: ' ·';
      padding: 0 0.5em;
    }
  }

  &__image {
    @extend %container;
    @extend %text;
  }

  &__text {
    @extend %container;
    @extend %text;
    font-family: $font--serif;
  }

  &__image + &__text {
    margin-top: rem($tick--vertical);
  }

  &__links {
    @extend %container;
    margin-top: rem($tick--vertical);
    margin-bottom: 0;

    &__link {
      display: inline-block;
      list-style: none;
      width: rem(30px);
      text-align: center;

      &--socials {
        width: auto;
        text-align: left;
        line-height: rem(20px);

        > * {
          padding-left: rem(5px);
          position: relative;
          filter: grayscale(100%);
          opacity: 0.33;
          transition: trans(filter, $duration--ease), trans(opacity, $duration--ease);

          &::before {
            content: '';
            position: absolute;
            top: -0.5em;
            right: -0.5em;
            bottom: -0.5em;
            left: -0.5em;
          }

          &:hover {
            filter: grayscale(0%);
            opacity: 1;
          }
        }
      }
    }

    a {
      color: $color--faint;

      &:hover {
        color: $color--accent;
      }
    }

    .like_button, .reblog_button {
      opacity: 0;
      cursor: pointer;
      position: absolute;
      z-index: 1;

      & + i {
        color: $color--faint;
        transition: trans(color);
      }

      &:hover + i {
        color: $color--accent;
      }

      &.liked + i {
        color: #ff4c53;
      }
    }
  }

  @include breakpoint(phone) {
    padding-top: 0;

    &::before {
      display: none;
    }

    &__image {
      max-width: none;
      padding-left: 0;
      padding-right: 0;
    }

    &__links {
      &__link {
        &--socials {
          display: none;
        }
      }
    }
  }
}

